# 42sh

./: .gitattributes  .gitignore  Makefile.am  README.md  configure.ac
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h  evaluation.c  free_node.c
src/builtins/: Makefile.am  builtins_s1_2.c  builtins_s1_2.h  builtins_s3.c  builtins_s3.h
src/io_backend/: Makefile.am  handle_input.c  handle_input.h
src/lexer/: Makefile.am  lexer.c  lexer.h  print.c
src/parser/: Makefile.am  parser.c  parser.h
src/utils/: Makefile.am  context.c  context.h  expand_variables.c  expansion.c  expansion.h  myutils.c  myutils.h
tests/: Makefile.am  tests.sh
tests/shell_scripts/: 42shsh42.sh  80cols.sh  alphanum.sh  ascii_house.sh  assignment.sh  break2.sh  case_default.sh  case_multiple_choice.sh  case_simple.sh  case_var_choice.sh  comment_handle.sh  complex_chars.sh  continue2.sh  create.sh  create_files.sh  echoes.sh  edit.sh  escape_newline.sh  facto.sh  find_ascii.sh  func_in_func.sh  funkinox.sh  generate_files.sh  get_ids.sh  glob_easy.sh  glob_remove_shell.sh  house.sh  if_false.sh  if_true.sh  inside.sh  inside_noif.sh  list_numbers.sh  ls_alias.sh  maxileak.sh  my_bc.sh  my_file.sh  nested_loops.sh  override.sh  print.sh  prototypes.sh  (+15 more)
